--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>6.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
